--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Em Gilbertsen</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>This is a webside about me</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Knitting, reading, hiking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Librarian</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Portland, OR</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Constant opportunities to learn</p>
     </section>
 
     <footer id="footer">
