--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>This is a webside about me</p>
+      <p>This is a website about me</p>
       <h1>Where I'm From</h1>
       <p>Chicago, IL</p>
       <h1>What are your favorite hobbies?</h1>
